@@ -17,6 +17,8 @@
   <link href="{% static 'arachnys/css/base.less' %}" type="text/less" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'arachnys/css/morris.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'arachnys/css/graph.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'autocomplete_light/vendor/select2/dist/css/select2.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'autocomplete_light/select2.css' %}" type="text/css">
   {% endcompress %}
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
