@@ -9,6 +9,7 @@ dj-database-url==0.4.2
 Django==1.11
 django-appconf==1.0.2
 django-auth-ldap==1.2.11
+django-autocomplete-light==3.2.10
 django-compressor==2.1.1
 django-filter==1.0.2
 django-jsonify==0.3.0
